[package]
name = "embedded"
version = "0.1.0"
authors = ["mateusz <mateusz@rustle.pl>"]
edition = "2018"


[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-itm = "0.4.2"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
embedded-hal = "0.2.5"
panic-halt = "0.2.0"
nb = "1.0.0"
max7219-dot-matrix = { git = "https://github.com/ninjasource/max7219-dot-matrix.git" }


# Access to the stm32f103 HAL.
[dependencies.stm32f1xx-hal]
# Bluepill contains a 64kB flash variant which is called "medium density"
features = ["stm32f103", "rt", "medium"]
version = "^0.6.1"
