[package]
name = "embedded"
version = "0.1.0"
authors = ["mateusz <mateusz@rustle.pl>"]
edition = "2018"


[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-itm = "0.4.2"
panic-semihosting ="0.6.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
nb = "1.0.0"
usb-device ="0.2.9"
usbd-serial ="0.1.1"
# Access to the stm32f103 HAL.
[dependencies.stm32f1xx-hal]
# Bluepill contains a 64kB flash variant which is called "medium density"
features = ["stm32f103", "rt", "medium"]
version = "0.9.0"
